[package]
name = "filters"
version.workspace = true
edition = "2024"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "Pattern filtering helpers for the Rust rsync workspace"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
globset = "0.4"
logging = { path = "../logging" }
