[package]
name = "flist"
version.workspace = true
edition = "2024"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "File list generation and traversal for the Rust rsync implementation (mirrors upstream flist.c)"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
logging = { path = "../logging" }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = []
