[package]
name = "flist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "File list generation and traversal for the Rust rsync implementation (mirrors upstream flist.c)"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
logging = { path = "../logging" }
rayon = { version = "1.10", optional = true }
serde = { workspace = true, optional = true }
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.10.1"

[features]
default = []
# Parallel file list processing using rayon
parallel = ["rayon"]
# Serialization support for file list types
serde = ["dep:serde"]
