[package]
name = "flist"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "File list generation and traversal for the Rust rsync implementation (mirrors upstream flist.c)"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
logging = { path = "../logging" }
rayon = { version = "1.10", optional = true }
serde = { workspace = true, optional = true }
thiserror = "2.0"

# For Unix syscalls (fstatat, statx) in batched_stat module
[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[dev-dependencies]
tempfile = "3.15"

[features]
default = []
# Parallel file list processing using rayon and batched syscalls
parallel = ["rayon", "dep:libc"]
# Serialization support for file list types
serde = ["dep:serde"]
