[package]
name = "rsync-logging"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Logging utilities for the Rust rsync implementation"
repository = "https://github.com/oferchen/rsync"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
rsync-core = { path = "../core" }
