[package]
name = "logging"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Logging and verbosity flag system for info and debug output control"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = []
# Serialization support for logging configuration types
serde = ["dep:serde"]
# Tracing integration - bridges tracing crate with rsync verbosity system
tracing = ["dep:tracing", "dep:tracing-subscriber"]

[dependencies]
serde = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
tracing-subscriber = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[[example]]
name = "tracing_demo"
required-features = ["tracing"]
