[package]
name = "matching"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Block matching and delta generation for rsync transfers"
repository.workspace = true

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
signature = { path = "../signature" }
logging = { path = "../logging" }
rustc-hash = { workspace = true }
rayon = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true, optional = true }

[target.'cfg(not(windows))'.dependencies]
checksums = { path = "../checksums" }

[target.'cfg(windows)'.dependencies]
checksums = { path = "../checksums", default-features = false }

[features]
default = []
# Structured logging instrumentation for performance analysis
tracing = ["dep:tracing"]
# Internal benchmark scaffolding: exposes additional accessors and toggles
# used only by the bench harnesses in `benches/`. Never enabled by default,
# never propagated to workspace `default-features`, the CLI `features`
# table, or the daemon. There is no way to turn it on from a release
# `oc-rsync` invocation. See `docs/design/zsync-bithash.md` section 7 and
# `docs/design/zsync-prune.md` benchmark plan.
bench-internal = []

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
protocol = { path = "../protocol" }
rand = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "delta_matching_benchmark"
harness = false

[[bench]]
name = "profiling_analysis"
harness = false

[[bench]]
name = "bithash_rejection"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "seq_match_redundant"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "prune_duplicate_heavy"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "compact_keys_cache"
harness = false
required-features = ["bench-internal"]

[[bench]]
name = "zsync_medium_dataset"
harness = false

[[bench]]
name = "zsync_optimizations"
harness = false
