[package]
name = "rsync-meta"
version = "0.0.0"
edition = "2024"
authors = ["Ofer Chen"]
license = "GPL-3.0-or-later"
description = "Metadata preservation helpers for the Rust rsync implementation"
repository = "https://github.com/oferchen/rsync"

[dependencies]
filetime = "0.2"

[dev-dependencies]
tempfile = "3.10"
