[package]
name = "metadata"
version.workspace = true
edition = "2024"
authors = ["Ofer Chen <skewers.irises.3b@icloud.com>"]
license = "GPL-3.0-or-later"
description = "Metadata preservation helpers for the Rust rsync implementation"
repository.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
filetime = "0.2"
protocol = { path = "../protocol" }
rustix = { version = "0.38", features = ["fs", "process"] }
libc = "0.2"
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
xattr = { version = "1.6", optional = true }

[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "tvos", target_os = "watchos"))'.dependencies]
apple-fs = { path = "../apple-fs" }

[features]
default = []
xattr = ["dep:xattr"]
acl = []

[dev-dependencies]
tempfile = "3.10"
