[package]
name = "metadata"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Metadata preservation helpers for the Rust rsync implementation"
repository.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
filetime = { workspace = true }
logging = { path = "../logging" }
protocol = { path = "../protocol" }
rustix = { workspace = true, features = ["fs", "process"] }
libc = { workspace = true }
thiserror = { workspace = true }

[target.'cfg(unix)'.dependencies]
fast_io = { path = "../fast_io", default-features = false }
# Safe wrappers over the libc mknod/mkfifo symbols for special-file creation.
# Symbol-backed (not raw syscalls), so fakeroot's LD_PRELOAD can intercept them.
nix = { workspace = true, features = ["fs"] }
xattr = { workspace = true, optional = true }
# chown/lchown/fchown must go through libc symbols (not rustix raw syscalls) so
# fakeroot's LD_PRELOAD interposition can fake ownership for a non-root process.
# `user` gates Uid/Gid; `fs` gates fchown/fchownat.
nix = { workspace = true, features = ["user", "fs"] }

# Cross-platform ACL support (Linux, macOS, FreeBSD)
# Replaces custom FFI bindings for cleaner, safer implementation
[target.'cfg(any(target_os = "linux", target_os = "macos", target_os = "freebsd"))'.dependencies]
exacl = { workspace = true, optional = true }

[target.'cfg(any(target_os = "ios", target_os = "macos", target_os = "tvos", target_os = "watchos"))'.dependencies]
apple-fs = { path = "../apple-fs" }

# Windows ACL support via Win32 GetSecurityInfo/SetSecurityInfo.
# Mirrors upstream rsync acls.c semantics over NTFS DACLs.
# Win32_System_Threading is required for OpenProcessToken/GetCurrentProcess
# used by the --copy-as privilege probe in copy_as.rs.
[target.'cfg(windows)'.dependencies]
fast_io = { path = "../fast_io", default-features = false }
windows = { workspace = true, features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_System_Ioctl",
    "Win32_System_SystemServices",
    "Win32_System_Threading",
] }

[features]
default = []
xattr = ["dep:xattr"]
acl = ["dep:exacl"]

[dev-dependencies]
tempfile = { workspace = true }
test-support = { path = "../test-support" }

[target.'cfg(unix)'.dev-dependencies]
xattr = { workspace = true }
