[package]
name = "platform"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
description = "Platform-specific unsafe code isolation for oc-rsync"
repository.workspace = true
publish = false

[dependencies]
thiserror = "2.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
nix = { version = "0.31", default-features = false, features = ["fs", "process", "user"] }
signal-hook = "0.4"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_NetManagement",
    "Win32_Security",
    "Win32_Security_Authentication_Identity",
    "Win32_System_Console",
    "Win32_System_Services",
    "Win32_System_EventLog",
] }

[dev-dependencies]
tempfile = "3.15"
