[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Protocol negotiation utilities for the Rust rsync implementation"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
# Compression algorithm features (match compress crate features)
lz4 = ["compress/lz4"]
zstd = ["compress/zstd"]
# Filename encoding conversion (iconv)
iconv = ["encoding_rs"]
# Async codec support using tokio-util
async = ["bytes", "tokio", "tokio-util"]
# Serialization support for protocol types
serde = ["dep:serde"]

[dependencies]
bytes = { version = "1.9", optional = true }
compress = { path = "../compress" }
encoding_rs = { version = "0.8", optional = true }
flate2 = { version = "1.0", default-features = false, features = ["zlib-rs"] }
logging = { path = "../logging" }
md-5 = { version = "0.10", default-features = false, features = ["std"] }
memchr = "2.7"
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = "2.0"
tokio = { version = "1.43", features = ["io-util"], optional = true }
tokio-util = { version = "0.7", features = ["codec"], optional = true }

[dev-dependencies]
proptest = "1.4"
serde_json = { workspace = true }
tempfile = "3.10"
tokio = { version = "1.43", features = ["macros", "rt"] }
