[package]
name = "protocol"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Protocol negotiation utilities for the Rust rsync implementation"
readme = "README.md"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[features]
# Compression algorithm features (match compress crate features)
default = ["zlib-ng"]
lz4 = ["compress/lz4", "dep:lz4_flex"]
zstd = ["compress/zstd", "dep:zstd"]
# zlib-ng backend (C library with SIMD: SSE2, AVX2, NEON) - matches upstream rsync performance
zlib-ng = ["flate2/zlib-ng", "compress/zlib-ng"]
# Pure Rust fallback - no C compiler required, slower than zlib-ng
zlib-rs = ["flate2/zlib-rs"]
# Filename encoding conversion (iconv)
iconv = ["encoding_rs"]
# Async codec support using tokio-util
async = ["dep:bytes", "dep:tokio", "dep:tokio-util"]
# EXPERIMENTAL (ASY, default-off): compiles the async multiplex read leaf
# (`recv_msg_into_async`), the `.await`-driven counterpart to `recv_msg_into`.
# Pulls only the minimal tokio I/O surface (`io-util`). Additive and unwired;
# the sync path is unchanged when this is off. See
# docs/design/asy-2-tokio-runtime-feature.md and
# docs/design/asy-7-receiver-tokio-prototype.md.
tokio-transfer = ["dep:tokio"]
# Serialization support for protocol types
serde = ["dep:serde"]
# Structured tracing for I/O operations
tracing = ["dep:tracing"]

[dependencies]
bytes = { version = "1.9", optional = true }
compress = { path = "../compress" }
encoding_rs = { version = "0.8", optional = true }
# Default: miniz_oxide (pure Rust fallback). zlib-ng/zlib-rs override via features.
flate2 = { workspace = true }
logging = { path = "../logging" }
md-5 = { workspace = true, features = ["std"] }
memchr = { workspace = true }
rustc-hash = { workspace = true }
serde = { workspace = true, optional = true }
thiserror = { workspace = true }
lz4_flex = { workspace = true, optional = true, features = ["safe-encode", "safe-decode"] }
zstd = { workspace = true, optional = true }
tokio = { workspace = true, features = ["io-util"], optional = true }
tokio-util = { workspace = true, features = ["codec"], optional = true }
tracing = { workspace = true, optional = true }

[dev-dependencies]
criterion = { workspace = true }
proptest = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[[bench]]
name = "delta_wire_benchmark"
harness = false

[[bench]]
name = "flist_benchmark"
harness = false

[[bench]]
name = "file_entry_memory"
harness = false

[[bench]]
name = "wire_protocol_bench"
harness = false

[[bench]]
name = "flist_rss_fixture"
harness = false

[[bench]]
name = "flist_rss_regression"
harness = false
