[package]
name = "rsync_io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "Socket and pipe I/O utilities for the Rust rsync implementation (mirrors upstream io.c)"

[package.metadata.docs.rs]
all-features = true
no-default-features = false
rustdoc-args = ["--cfg", "docsrs", "-D", "rustdoc::broken_intra_doc_links"]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
thiserror = { workspace = true }
protocol = { path = "../protocol" }
logging = { path = "../logging" }
memchr = { workspace = true }
shell-words = "1.1"
russh = { workspace = true, optional = true }
url = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }
is-terminal = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
embedded-ssh = ["dep:russh", "dep:url", "dep:rpassword", "dep:is-terminal", "dep:tokio"]
# Async SSH transport: opt-in tokio-process backing for `SshConnection`.
# See `docs/design/async-ssh-transport.md` (#1593) for the staging plan.
async-ssh = ["dep:tokio"]
# SSH stderr socketpair connection primitive (SSE-3, #2372). Default off
# until SSE-7 ships parity tests. See
# `docs/design/socketpair-stderr-channel.md` for the staging plan.
ssh-socketpair-stderr = []

[dev-dependencies]
proptest = { workspace = true }
rand = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "rt", "macros", "net", "io-util"] }
criterion = { workspace = true }
aes-gcm = "0.10"
chacha20poly1305 = "0.10"

[[bench]]
name = "ssh_cipher"
harness = false

[[bench]]
name = "ssh_sync_vs_async"
harness = false
